--- a/Header.css
+++ b/Header.css
@@ -10,6 +10,7 @@ head
     border-bottom: 1px solid rgba(0,0,0,0.3);
     padding-left: 20px;
     background-color: white;
+    width: 1200px;
 }
 .head-2
 {
@@ -20,6 +21,7 @@ head
     padding-right: 30px;
     border-bottom: 1px solid rgba(0,0,0,0.3);
     background-color: white;
+    width: 1200px;
 }
 .section-1-head-2
 {
@@ -158,7 +160,7 @@ head
 {
     height: 15px;
     width: 20px;
-    box-shadow: 1px 1px 2px 2 px rgba(0,0,0,0.3);
+    box-shadow: 2px 2px 3px 1.5px rgba(0,0,0,0.15);
 }
 
 .flag-1-head-2
@@ -195,7 +197,7 @@ head
 }
 .col-1-head-1
 {
-    width: 230px;
+   width: 230px;
 }
 .button-1-head-2:hover .drp-dwn-head-2-2
 {
@@ -225,7 +227,7 @@ head
     padding-top: 5px;
     padding-bottom: 5px;
     font-size: 14px;
-    color: rgb(171, 171, 171);
+    color: rgb(77, 77, 77);
     font-weight: 500;
 }
 .dd-arrow-head-2
@@ -253,6 +255,7 @@ head
 .dd-arrow-content-2-2
 {
     vertical-align: middle;
+    text-decoration: none;
     font-size: 14px;
     color: rgb(250, 77, 50);
 }
@@ -342,4 +345,61 @@ head
 {
     text-decoration: underline;
     transition: 0.8s ease-in-out;
+}
+
+.dd-content-head-4
+{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 20px;
+    width: 100%;
+    font-size: 14px;
+    color: rgb(77, 77, 77);
+    font-weight: 500;
+    border-radius: 10px;
+    background-color: white;
+    text-align: middle;
+}
+
+.dd-content-head-4:hover
+{
+    color: rgb(250, 77, 50);
+    transition: 0.30s;
+}
+.dd-content-head-4:active
+{
+    background-color: rgb(245, 243, 250);
+    transition: 0.25s;
+}
+.row-1-head-4
+{
+    display: flex;
+    float: bottom;
+    justify-content: space-evenly;
+    color: black;
+    border-bottom: 1px solid rgb(171, 171, 171);
+}
+.lang-head-2
+{
+    display: flex;
+    text-decoration: none;
+    padding-top: 7px;
+    padding-bottom: 7px;
+}
+.lang-flag-head-2
+{
+    height: 15px;
+    width: 20px;
+    object-fit: cover;
+    object-position: center;
+    padding-right: 5px;
+}
+.lang-name-head-2
+{
+    color: rgb(77, 77, 77);
+}
+.lang-head-2:hover .lang-name-head-2
+{
+    color: rgb(250, 77, 50);
+    transition: 0.30s;
 }
