--- a/Header.css
+++ b/Header.css
@@ -1,7 +1,10 @@
 head
 {
     position: absolute;
-    max-width: 1200px;
+    width: 1200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .head-1
 {
@@ -10,7 +13,7 @@ head
     border-bottom: 1px solid rgba(0,0,0,0.3);
     padding-left: 20px;
     background-color: white;
-    width: 1200px;
+    max-width: 1200px;
 }
 .head-2
 {
@@ -21,7 +24,8 @@ head
     padding-right: 30px;
     border-bottom: 1px solid rgba(0,0,0,0.3);
     background-color: white;
-    width: 1200px;
+    justify-content: space-between;
+    max-width: 1200px;
 }
 .section-1-head-2
 {
@@ -40,11 +44,12 @@ head
 {
     display: flex;
     border: 1px solid rgba(0,0,0,0.25);
-    padding: 8px 5px 8px 10px;
+    padding: 8px 0px 8px 10px;
 }
 .section-4-head-2
 {
     display: flex;
+    justify-content: end;
 }
 .line-1-head-1
 {
@@ -160,7 +165,7 @@ head
 {
     height: 15px;
     width: 20px;
-    box-shadow: 2px 2px 3px 1.5px rgba(0,0,0,0.15);
+    box-shadow: 1px 1px 2px 2 px rgba(0,0,0,0.3);
 }
 
 .flag-1-head-2
@@ -183,7 +188,7 @@ head
     display: none;
     position: absolute;
     width: 1200px;
-    left: 0;
+    left: 0px;
     top: 100%;
     box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.25);
 }
@@ -197,7 +202,7 @@ head
 }
 .col-1-head-1
 {
-   width: 230px;
+    width: 240px;
 }
 .button-1-head-2:hover .drp-dwn-head-2-2
 {
@@ -349,8 +354,8 @@ head
 
 .dd-content-head-4
 {
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     padding-left: 20px;
     width: 100%;
     font-size: 14px;
@@ -358,7 +363,6 @@ head
     font-weight: 500;
     border-radius: 10px;
     background-color: white;
-    text-align: middle;
 }
 
 .dd-content-head-4:hover
@@ -375,7 +379,7 @@ head
 {
     display: flex;
     float: bottom;
-    justify-content: space-evenly;
+    justify-content: space-around;
     color: black;
     border-bottom: 1px solid rgb(171, 171, 171);
 }
@@ -385,21 +389,33 @@ head
     text-decoration: none;
     padding-top: 7px;
     padding-bottom: 7px;
+    padding-left: 20px;
 }
 .lang-flag-head-2
 {
     height: 15px;
     width: 20px;
+    border: 1px solid rgba(0,0,0,0.2);
     object-fit: cover;
     object-position: center;
-    padding-right: 5px;
+    padding: 0px 0px 0px 0px;
 }
 .lang-name-head-2
 {
+    display: flex;
+    justify-items: stretch;
+    padding-left: 10px;
     color: rgb(77, 77, 77);
 }
 .lang-head-2:hover .lang-name-head-2
 {
     color: rgb(250, 77, 50);
     transition: 0.30s;
+}
+.lang-head-2:hover
+{
+    background-color: rgb(245, 243, 250);
+    padding-left: 27px;
+    transition: 0.6s ease;
+    border-radius: 8px;
 }
