--- a/Main-Page-Style.css
+++ b/Main-Page-Style.css
@@ -10,9 +10,9 @@ body
 }
 .main
 {
-    max-width: 1200px;
+    width: 1200px;
     margin: auto;
-    border: 1px solid rgb(227, 227, 227);
+    /* border: 1px solid rgb(227, 227, 227); */
     padding-bottom: 2000px;
     
 }
